--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -89,6 +89,8 @@
             </div>
         </aside>
 
+        {% block content %}
+
         <!-- START - Block content -->
 
         <div class="flex items-center justify-center h-screen bg-gray-100 w-full">
@@ -98,6 +100,8 @@
         </div>
 
         <!-- END - Block content -->
+
+        {% endblock %}
 
     </div>
 </body>
