--- a/templates/dashboard/content/data.html
+++ b/templates/dashboard/content/data.html
@@ -43,12 +43,12 @@
         </div>
         <div>
           <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
-            Indicador 2
+            Producto más votado
           </p>
           <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
 
             <!-- START - valor del indicador 2 -->
-            Valor 2
+             {{ most_voted_product }}
             <!-- END - valor del indicador 2 -->
 
           </p>
@@ -66,12 +66,12 @@
         </div>
         <div>
           <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
-            Indicador 3
+            Último voto
           </p>
           <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
 
             <!-- START - valor del indicador 3 -->
-            Valor 3
+            {{ last_vote }}
             <!-- END - valor del indicador 3 -->
 
           </p>
