--- a/templates/dashboard/content/data.html
+++ b/templates/dashboard/content/data.html
@@ -22,7 +22,7 @@
         </div>
         <div>
           <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
-            Número total de respuestas
+            Número total de likes
           </p>
           <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
             <!-- START - valor del indicador 1 -->
@@ -43,11 +43,12 @@
         </div>
         <div>
           <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
-            Producto más votado
+            Plato más popular
           </p>
           <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
 
             <!-- START - valor del indicador 2 -->
+            {{ plato_mas_popular }}
             <!-- END - valor del indicador 2 -->
 
           </p>
@@ -65,11 +66,12 @@
         </div>
         <div>
           <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
-            Último voto
+            Cantidad de votos obtenidos
           </p>
           <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
 
             <!-- START - valor del indicador 3 -->
+            {{ votos_maximos }}
             <!-- END - valor del indicador 3 -->
 
           </p>
@@ -87,12 +89,12 @@
         </div>
         <div>
           <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
-            Indicador 4
+            Plato menos popular
           </p>
           <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
 
             <!-- START - valor del indicador 4 -->
-            Valor 4
+            {{ plato_menos_popular }}
             <!-- END - valor del indicador 4 -->
 
           </p>
