--- a/templates/dashboard/content/data.html
+++ b/templates/dashboard/content/data.html
@@ -119,7 +119,7 @@
             </thead>
             <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
               {% for plato, votos in conteos.items %}
-              <tr class="text-gray-700 dark:text-gray-400 {% cycle 'bg-gray-100' 'bg-white' %}">
+              <tr class="text-gray-700 dark:text-white {% cycle 'bg-gray-800' 'bg-gray-900' %}">
                 <td class="px-4 py-3 text-sm">
                   {{ plato }}
                 </td>
@@ -151,6 +151,7 @@
             Título del gráfico
           </h4>
           <canvas id="line"></canvas>
+          {{ conteos|json_script:"conteos-data" }}
         </div>
       </div>
       <!-- END - Gráficos -->
