--- a/templates/dashboard/content/data.html
+++ b/templates/dashboard/content/data.html
@@ -127,7 +127,7 @@
                   {% if votos > 100 %}
                     <span class="font-bold text-green-600">{{ votos }}</span>
                   {% else %}
-                    <span class="text-red-600">{{ votos }}</span>
+                    <span class="text-purple-600">{{ votos }}</span>
                   {% endif %}
                 </td>
               </tr>
